--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-<div>Liem Nguyen's Personal Website</div>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Liem Nguyen · @liemnguyen15</title>
+    <div>Liem Nguyen's Personal Website</div>
+  </head>
+</html>
