--- a/index.html
+++ b/index.html
@@ -1,7 +1,54 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Liem Nguyen · @liemnguyen15</title>
-    <div>Liem Nguyen's Personal Website</div>
+    <meta charset="utf-8" />
+    <title>Liem Nguyen &#183; About</title>
+    <meta name="author" content="Liem Nguyen" />
+    <link rel="icon" type="image/png" sizes="192x192" href="img/profile.jpg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="stylesheet" href="css/layout.css" />
+    <link rel="stylesheet" href="css/menu.css" />
+    <link rel="stylesheet" href="css/bio.css" />
+    <link rel="stylesheet" href="css/skills.css" />
+    <link rel="stylesheet" href="css/experience.css" />
+    <link rel="stylesheet" href="css/projects.css" />
+    <link rel="stylesheet" href="css/social.css" />
   </head>
+
+  <body>
+    <main>
+      <!--Menu-->
+      <nav class="menu">
+        <h3 class="menu-home"><a href="#">Liem Nguyen</a></h3>
+        <div class="menu-items">
+          <a href="#bio" class="menu-item">Bio</a>
+          <a href="#skills" class="menu-item">Skills</a>
+          <a href="#experience" class="menu-item">Experience</a>
+          <a href="#projects" class="menu-item">Projects</a>
+          <a href="#social" class="menu-item">Social</a>
+        </div>
+      </nav>
+
+      <!--Bio-->
+      <div id="#bio">
+        <div class="bio-header">Bio</div>
+        <div class="bio-text">
+          <p>
+            Hello there, my name is Liem Nguyen. I was born and raised in the
+            Silicon Valley. I graduated from
+            <b>The University of California, Davis</b>, earning a
+            <b
+              >Bachelors in Computer Science with a Minor in Technology
+              Management</b
+            >. I love building software, using the Internet as my greatest
+            weapon, and making an impact on today's culture. Feel free to reach
+            out to me for my resume, ask me a question, or talk business.
+          </p>
+        </div>
+      </div>
+    </main>
+
+    <footer class="footer"><a href="#"> © 2019 Liem Nguyen </a></footer>
+  </body>
 </html>
