--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
   <body>
     <main>
       <!--Menu-->
-      <nav class="menu">
+      <nav class="container menu">
+        <h3 class="menu-home"><a href="#">Liem Nguyen</a></h3>
         <div class="menu-items">
           <a href="#bio" class="menu-item">Bio</a>
           <a href="#skills" class="menu-item">Skills</a>
@@ -36,13 +37,11 @@
           <p>
             Hello there, my name is Liem Nguyen. I was born and raised in the
             Silicon Valley. I graduated from
-            <b>The University of California, Davis</b>, earning a
-            <b
-              >Bachelors in Computer Science with a Minor in Technology
-              Management</b
-            >. I love building software, using the Internet as my greatest
-            weapon, and making an impact on today's culture. Feel free to reach
-            out to me for my resume, ask me a question, or talk business.
+            <b>The University of California, Davis</b>, earning a Bachelors in
+            Computer Science with a Minor in Technology Management. I love
+            building software, using the Internet as my greatest weapon, and
+            making an impact on today's culture. Feel free to reach out to me
+            for my resume, ask me a question, or talk business.
           </p>
         </div>
       </div>
