--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8" />
     <title>Liem Nguyen &#183; About</title>
     <meta name="author" content="Liem Nguyen" />
+
     <link rel="icon" type="image/png" sizes="192x192" href="img/profile.jpg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="stylesheet" href="css/layout.css" />
     <link rel="stylesheet" href="css/menu.css" />
@@ -14,6 +13,8 @@
     <link rel="stylesheet" href="css/experience.css" />
     <link rel="stylesheet" href="css/projects.css" />
     <link rel="stylesheet" href="css/social.css" />
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
 
   <body>
@@ -31,22 +32,34 @@
       </nav>
 
       <!--Bio-->
-      <div id="#bio">
-        <div class="bio-header">Bio</div>
+      <div class="text" id="bio">
+        <div class="bio-header">Bio.</div>
         <div class="bio-text">
           <p>
             Hello there, my name is Liem Nguyen. I was born and raised in the
             Silicon Valley. I graduated from
-            <b>The University of California, Davis</b>, earning a Bachelors in
-            Computer Science with a Minor in Technology Management. I love
-            building software, using the Internet as my greatest weapon, and
-            making an impact on today's culture. Feel free to reach out to me
-            for my resume, ask me a question, or talk business.
+            <b>The University of California, Davis</b>, earning a
+            <i
+              >Bachelors in Computer Science with a Minor in Technology
+              Management</i
+            >. I love building software, using the Internet as my greatest
+            weapon, and making an impact on today's culture. Feel free to reach
+            out to me for my resume, ask me a question, or talk business.
           </p>
+        </div>
+      </div>
+
+      <!--Social-->
+      <div class="text" id="social">
+        <div class="social-header">Social.</div>
+        <div class="social-text">
+          <a href="https://www.linkedin.com/in/liemnguyen15" target="_blank"
+            ><img src="img/linkedin.jpg"
+          /></a>
         </div>
       </div>
     </main>
 
-    <footer class="footer"><a href="#"> © 2019 Liem Nguyen </a></footer>
+    <footer class="footer">© 2019 Liem Nguyen</footer>
   </body>
 </html>
