--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
         <h3 class="menu-home"><a href="#">Liem Nguyen</a></h3>
         <div class="menu-items">
           <a href="#bio" class="menu-item">Bio</a>
-          <a href="#skills" class="menu-item">Skills</a>
-          <a href="#experience" class="menu-item">Experience</a>
+          <a href="Liem Nguyen's Resume.pdf" class="menu-item">Resume</a>
           <a href="#projects" class="menu-item">Projects</a>
           <a href="#social" class="menu-item">Social</a>
         </div>
