--- a/index.html
+++ b/index.html
@@ -55,6 +55,12 @@
           <a href="https://www.linkedin.com/in/liemnguyen15" target="_blank"
             ><img src="img/linkedin.jpg"
           /></a>
+          <a href="https://www.github.com/liemnguyen15" target="_blank"
+            ><img src="img/github.jpg"
+          /></a>
+          <a href="https://www.instagram.com/liemstagram" target="_blank"
+            ><img src="img/instagram.png"
+          /></a>
         </div>
       </div>
     </main>
