--- a/index.html
+++ b/index.html
@@ -61,6 +61,14 @@
           <a href="https://www.instagram.com/liemstagram" target="_blank"
             ><img src="img/instagram.png"
           /></a>
+          <a
+            href="https://www.youtube.com/channel/UCx8sp-P9uPUJ1wFWiRyNYVw"
+            target="_blank"
+            ><img src="img/youtube.png"
+          /></a>
+          <a href="https://soundcloud.com/liemnguyen15" target="_blank"
+            ><img src="img/soundcloud.png"
+          /></a>
         </div>
       </div>
     </main>
