--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
           <a href="https://soundcloud.com/liemnguyen15" target="_blank"
             ><img src="img/soundcloud.png"
           /></a>
+          <a href="https://empirically.co" target="_blank"
+            ><img src="img/empirically.png"
+          /></a>
         </div>
       </div>
     </main>
