--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
         <h3 class="menu-home"><a href="#">Liem Nguyen</a></h3>
         <div class="menu-items">
           <a href="#bio" class="menu-item">Bio</a>
-          <a href="Resume.pdf" target="_blank" class="menu-item">Resume</a>
+          <a href="Liem's Resume.pdf" target="_blank" class="menu-item"
+            >Resume</a
+          >
           <a href="#projects" class="menu-item">Projects</a>
           <a href="#social" class="menu-item">Social</a>
         </div>
