--- a/index.html
+++ b/index.html
@@ -38,15 +38,35 @@
         <div class="bio-text">
           <p>
             Hello there, my name is Liem Nguyen. I was born and raised in the
-            Silicon Valley. I graduated from
-            <b>The University of California, Davis</b>, earning a
-            <i
-              >Bachelors in Computer Science with a Minor in Technology
-              Management</i
-            >. I love building software, using the Internet as my greatest
-            weapon, and making an impact on today's culture. Feel free to reach
-            out to me for my resume, ask me a question, or talk business.
+            Silicon Valley.
           </p>
+          <p>
+            I graduated from
+            <b>The University of California, Davis</b>, earning a<i
+              >Bachelors in Computer Science with a Minor in
+              TechnologyManagement</i
+            >.
+          </p>
+          <p>
+            I love building software, using the Internet as my greatest weapon,
+            and making an impact on today's culture.
+          </p>
+        </div>
+      </div>
+
+      <!--Projects-->
+      <div class="text" id="projects">
+        <div class="project-header">Projects</div>
+        <div class="project-text">
+          <a href="https://www.github.com/liemnguyen15" target="_blank"
+            ><img src="img/github.jpg"
+          /></a>
+          <a href="https://soundcloud.com/liemnguyen15" target="_blank"
+            ><img src="img/soundcloud.png"
+          /></a>
+          <a href="https://empirically.co" target="_blank"
+            ><img src="img/empirically.png"
+          /></a>
         </div>
       </div>
 
@@ -57,9 +77,6 @@
           <a href="https://www.linkedin.com/in/liemnguyen15" target="_blank"
             ><img src="img/linkedin.jpg"
           /></a>
-          <a href="https://www.github.com/liemnguyen15" target="_blank"
-            ><img src="img/github.jpg"
-          /></a>
           <a href="https://www.instagram.com/liemstagram" target="_blank"
             ><img src="img/instagram.png"
           /></a>
@@ -67,12 +84,6 @@
             href="https://www.youtube.com/channel/UCx8sp-P9uPUJ1wFWiRyNYVw"
             target="_blank"
             ><img src="img/youtube.png"
-          /></a>
-          <a href="https://soundcloud.com/liemnguyen15" target="_blank"
-            ><img src="img/soundcloud.png"
-          /></a>
-          <a href="https://empirically.co" target="_blank"
-            ><img src="img/empirically.png"
           /></a>
         </div>
       </div>
