--- a/index.html
+++ b/index.html
@@ -42,9 +42,10 @@
           </p>
           <p>
             I graduated from
-            <b>The University of California, Davis</b>, earning a<i
-              >Bachelors in Computer Science with a Minor in
-              TechnologyManagement</i
+            <b>The University of California, Davis</b>, earning a
+            <i
+              >Bachelors in Computer Science with a Minor in Technology
+              Management</i
             >.
           </p>
           <p>
