--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
       <!--Projects-->
       <div class="text" id="projects">
-        <div class="project-header">Projects</div>
+        <div class="project-header">Projects.</div>
         <div class="project-text">
           <a href="https://www.github.com/liemnguyen15" target="_blank"
             ><img src="img/github.jpg"
