--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/experience.css" />
     <link rel="stylesheet" href="css/projects.css" />
     <link rel="stylesheet" href="css/social.css" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
@@ -36,19 +37,28 @@
             Silicon Valley.
           </p>
           <p>
-            I graduated from
-            <b>The University of California, Davis</b>, earning a
+            I'm currently a <b>Cloud Integration Engineer</b> at
+            <i><a href="https://www.juul.com/" target="_blank">JUUL Labs</a></i
+            >, helping build software to create the next generation API-led
+            enterprise IT infratstructure. I also serve part-time as an
+            <b>Academic Tutor</b> at
             <i
-              >Bachelors in Computer Science with a Minor in Technology
-              Management</i
-            >.
+              ><a href="https://www.crimsoneducation.org/us/" target="_blank"
+                >Crimson Education</a
+              ></i
+            >, remotely tutoring and consulting students around the world in the
+            realm of computer science, SAT exams, and college applications.
           </p>
           <p>
-            I love building software, using the Internet as my greatest weapon,
-            and making an impact on today's culture.
+            I am passionate about building software, using the Internet as my
+            greatest weapon, and making an impact on today's culture.
+          </p>
+          <p>
+            I am currently based in San Francisco, California.
           </p>
         </div>
       </div>
+
       <!--Projects-->
       <div class="text" id="projects">
         <div class="project-header">Projects.</div>
@@ -56,8 +66,17 @@
           <a href="https://www.github.com/liemnguyen15" target="_blank"
             ><img src="img/github.jpg"
           /></a>
+          <a
+            href="https://www.youtube.com/channel/UCrIUHaZRZSWazIbUhq07_4Q"
+            target="_blank"
+            ><img src="img/empirically2.png"
+          /></a>
+          <a href="https://soundcloud.com/liemnguyen15" target="_blank"
+            ><img src="img/soundcloud.png"
+          /></a>
         </div>
       </div>
+
       <!--Social-->
       <div class="text" id="social">
         <div class="social-header">Social.</div>
@@ -65,9 +84,12 @@
           <a href="https://www.linkedin.com/in/liemnguyen15" target="_blank"
             ><img src="img/linkedin.jpg"
           /></a>
+          <a href="https://www.instagram.com/liemstagram/" target="_blank"
+            ><img src="img/instagram.png"
+          /></a>
         </div>
       </div>
     </main>
-    <footer class="footer">© 2019 Liem Nguyen</footer>
+    <footer class="footer">© 2020 Liem Nguyen</footer>
   </body>
 </html>
