--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <a href="Liem's Resume.pdf" target="_blank" class="menu-item"
             >Resume</a
           >
-          <a href="#projects" class="menu-item">Projects</a>
+          <!--<a href="#projects" class="menu-item">Projects</a>-->
           <a href="#social" class="menu-item">Social</a>
         </div>
       </nav>
@@ -34,11 +34,9 @@
         <div class="bio-text">
           <p>
             Hello there, my name is Liem Nguyen. I was born and raised in the
-            Silicon Valley.
-          </p>
-          <p>
-            I am passionate about building software, using the Internet as my
-            greatest weapon, and making an impact on today's culture.
+            Silicon Valley. I am passionate about building software, using the
+            Internet as my greatest weapon, and making an impact on today's
+            culture.
           </p>
           <p>
             I am currently based in San Francisco, California.
@@ -47,6 +45,7 @@
       </div>
 
       <!--Projects-->
+      <!--
       <div class="text" id="projects">
         <div class="project-header">Projects.</div>
         <div class="project-text">
@@ -60,8 +59,10 @@
           /></a>
         </div>
       </div>
+      -->
 
       <!--Social-->
+
       <div class="text" id="social">
         <div class="social-header">Social.</div>
         <div class="social-text">
