--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <a href="Liem's Resume.pdf" target="_blank" class="menu-item"
             >Resume</a
           >
-          <!--<a href="#projects" class="menu-item">Projects</a>-->
+          <!-- <a href="#projects" class="menu-item">Projects</a>-->
           <a href="#social" class="menu-item">Social</a>
         </div>
       </nav>
@@ -38,9 +38,7 @@
             Internet as my greatest weapon, and making an impact on today's
             culture.
           </p>
-          <p>
-            I am currently based in San Francisco, California.
-          </p>
+          <p>I am currently based in San Francisco, California.</p>
         </div>
       </div>
 
